XMLExper/m12/m12_61_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:762:112: error: lvalue required as left operand of assignment
  762 |         /*PCI*/dynamic_cast<tinyxml2::XMLDocument*>(returnNode) = CreateUnlinkedNode<XMLUnknown>( _commentPool );
      |                                                                                                                ^
diff: tinyxml2.S: No such file or directory
